--- a/software/ncitbrowser/web/WEB-INF/web.xml
+++ b/software/ncitbrowser/web/WEB-INF/web.xml
@@ -12,7 +12,13 @@
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
         <param-value>server</param-value>
     </context-param>
-    
+ 
+<!-- remove id attribute from view-state -->
+<context-param>
+    <param-name>com.sun.faces.enableViewStateIdRendering</param-name>
+    <param-value>false</param-value>
+</context-param>
+   
     <context-param>
         <param-name>javax.faces.CONFIG_FILES</param-name>
         <param-value>/WEB-INF/faces-config.xml</param-value>
