--- a/software/ncitbrowser/web/WEB-INF/web.xml
+++ b/software/ncitbrowser/web/WEB-INF/web.xml
@@ -45,6 +45,17 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>test</servlet-name>
+        <servlet-class>gov.nih.nci.evs.browser.servlet.TestServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+         <servlet-name>test</servlet-name>
+         <url-pattern>/test</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
         <servlet-name>vsServlet</servlet-name>
         <servlet-class>gov.nih.nci.evs.browser.servlet.ValueSetServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
